download CA certificate endpoint
