# backend/admin/admin_server.go
@@ -2,13 +2,15 @@ package admin
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 
 	"github.com/stephenzsy/small-kms/backend/common"
 )
 
 type AdminServerInterface interface {
-	ListCACertificates(c *gin.Context, params common.ListCACertificatesParams)
+	ListCertificates(c *gin.Context, category common.CertificateCategory, params common.ListCertificatesParams)
 	CreateCertificate(c *gin.Context, params common.CreateCertificateParams)
+	DownloadCertificate(c *gin.Context, id uuid.UUID, params common.DownloadCertificateParams)
 }
 
 type adminServer struct {
