# backend/server/server_impl.go
@@ -2,6 +2,7 @@ package server
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 
 	"github.com/stephenzsy/small-kms/backend/admin"
 	"github.com/stephenzsy/small-kms/backend/common"
@@ -11,18 +12,25 @@ type serverImpl struct {
 	admin admin.AdminServerInterface
 }
 
-func (s *serverImpl) ListCACertificates(c *gin.Context, params common.ListCACertificatesParams) {
+func (s *serverImpl) ListCertificates(c *gin.Context, category common.CertificateCategory, params common.ListCertificatesParams) {
 	if s.admin == nil {
-		c.JSON(404, gin.H{"error": "Not allowed"})
+		c.JSON(404, gin.H{"error": "Not allowed with current role"})
 	}
-	s.admin.ListCACertificates(c, params)
+	s.admin.ListCertificates(c, category, params)
 }
 
 func (s *serverImpl) CreateCertificate(c *gin.Context, params common.CreateCertificateParams) {
 	if s.admin == nil {
-		c.JSON(404, gin.H{"error": "Not allowed"})
+		c.JSON(404, gin.H{"error": "Not allowed with current role"})
 	}
 	s.admin.CreateCertificate(c, params)
+}
+
+func (s *serverImpl) DownloadCertificate(c *gin.Context, id uuid.UUID, params common.DownloadCertificateParams) {
+	if s.admin == nil {
+		c.JSON(404, gin.H{"error": "Not allowed with current role"})
+	}
+	s.admin.DownloadCertificate(c, id, params)
 }
 
 func NewServerImpl() common.ServerInterface {
